*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -1,9 +1,17 @@
 [[სურათი:D odzela.jpg|thumb|''ოძელა'']]
 '''დავით ოძელაშვილი''', ''ოძელა'' (*  [[19??]],  [[თბილისი|თბილისში]] ―     †  [[2002]], [[ვენა]], [[ავსტრია]])
 
-დათომ ჩაწერა 1998 წელს, ოთარ მაღრაძესთან ერთად ორი კომპოზიცია ახალი ალბომისათვის: "თათრის მოედანი" და "გურული ჩანახატები".
+1999 წლიდან ოძელაშვილი იყო ჯაზ-კვარტეტის "თბილისი" წევრი (ფლეიტა) ოთარ მაღრაძესთან (ფორტეპიანო), ოთარ საგანელიძესთან (დუბლ-ბასი) და ვალერი ფაილოძესთან (დასარტყმელი ინსტრ.). დათოს თანამშრომლობა ოთარ მაღრაძესთან დაიწყო 1998 წლიდან ალმბომზე მუშაობის დროს სადაც მათ ორი კომპოზიცია ჩაწერეს ერთად: "თათრის მოედანი" და "გურული ჩანახატები".
+
+ჯგუფში ვალერი ფაილოძის შემოერთებამდე ოძელაშვილი ტრიოში მონაწილეობს [[საარბრიუკენი|საარბიუკენის]] 1000 წლისთავისადმი მიძღვნილ სამუსიკო ფესტივალში, სადაც სპეციალური მედლით დაჯილდოვდნენ წარმატებული შესრულებისთვის.
+
+შემდგომში დატო ჯაზ-კვარტეტთან ერთად გამოდის საერთაშორისო ჯაზ-ფესტივალზე ნანტში 2000 წლის სექტემბერში და თბილისში იმავე წელს გამართულ "ჯეოსელის ჯაზ-ფესტივალში".
 
 {{ესკიზი}}
+
+==რესურსები ინტერნეტში==
+*[http://jazz-tbilisi.chat.ru/ ჯაზ-კვარტეტი "თბილისი"]
+
 [[კატეგორია: ქართველები]]
 [[კატეგორია: ქართველი მუსიკოსები]]
 [[კატეგორია: ფლეიტისტები]]
