--- a/მარკუსი_(ბადენი).mw
+++ b/მარკუსი_(ბადენი).mw
@@ -9,3 +9,7 @@
 * [[გეორგ (ბადენი)|გეორგი]] (* [[1433]]; † [[1484]])
 * [[მარგარეტე (ბადენი)|მარგარეტე]] (* [[1431]]; † [[1457]])
 * [[მათილდე (ბადენი)|მათილდე]] († [[1485]])
+
+
+
+[[de:Markus (Baden)]]
