*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -3,7 +3,7 @@
 
 1999 წლიდან ოძელაშვილი იყო ჯაზ-კვარტეტის "თბილისი" წევრი (ფლეიტა) ოთარ მაღრაძესთან (ფორტეპიანო), ოთარ საგანელიძესთან (დუბლ-ბასი) და ვალერი ფაილოძესთან (დასარტყმელი ინსტრ.). დათოს თანამშრომლობა ოთარ მაღრაძესთან დაიწყო 1998 წლიდან ალმბომზე მუშაობის დროს სადაც მათ ორი კომპოზიცია ჩაწერეს ერთად: "თათრის მოედანი" და "გურული ჩანახატები".
 
-ჯგუფში ვალერი ფაილოძის შემოერთებამდე ოძელაშვილი ტრიოში მონაწილეობს [[საარბრიუკენი|საარბიუკენის]] 1000 წლისთავისადმი მიძღვნილ სამუსიკო ფესტივალში, სადაც სპეციალური მედლით დაჯილდოვდნენ წარმატებული შესრულებისთვის.
+ჯგუფში ვალერი ფაილოძის შემოერთებამდე ოძელაშვილი ტრიოში მონაწილეობს [[ზაარბრიუკენი|ზაარბიუკენის]] 1000 წლისთავისადმი მიძღვნილ სამუსიკო ფესტივალში, სადაც სპეციალური მედლით დაჯილდოვდნენ წარმატებული შესრულებისთვის.
 
 შემდგომში დატო ჯაზ-კვარტეტთან ერთად გამოდის საერთაშორისო ჯაზ-ფესტივალზე ნანტში 2000 წლის სექტემბერში და თბილისში იმავე წელს გამართულ "ჯეოსელის ჯაზ-ფესტივალში".
 
