--- a/მათილდე_(ბადენი).mw
+++ b/მათილდე_(ბადენი).mw
@@ -9,3 +9,7 @@
 * [[გეორგ (ბადენი)|გეორგი]] (* [[1433]]; † [[1484]])
 * [[მარკუს (ბადენი)|მარკუსი]] (* [[1434]]; † [[1478]])
 * [[მარგარეტე (ბადენი)|მარგარეტე]] (* [[1431]]; † [[1457]])
+
+
+
+[[de:Mathilde (Baden)]]
