--- a/პემბროკის_ციხესიმაგრე.mw
+++ b/პემბროკის_ციხესიმაგრე.mw
@@ -1,6 +1,6 @@
 [[image:pembroke.castle.750pix.jpg|thumb|250px|right|პემბროკის ციხე-სიმაგრე]]
 
-'''პემბროკის ციხე-სიმაგრე''' (''[[ინგლისური ენა|ინგლ.]]:'' Pembroke Castle; ''[[უელსური ენა|უელს.]]:''  Castell Penfro) მდებარეობს [[უელსი|უელსში]]. იგი სამი მხრიდან შემოსაზღვრულია მდ. ქლედაუთი, რაც მას ძნელად მისასვლელს ხდიდა მტრისთვის. ადგილის ისტორია რომაული ეპოქიდან იწყება, თუმცა დღეისათვის მნიშნელოვანი ისტორიული ნაშTები შემორჩენილი არაა.
+'''პემბროკის ციხე-სიმაგრე''' (''[[ინგლისური ენა|ინგლ.]]:'' Pembroke Castle; ''[[უელსური ენა|უელს.]]:''  Castell Penfro) მდებარეობს [[უელსი|უელსში]]. იგი სამი მხრიდან შემოსაზღვრულია მდ. ქლედაუთი, რაც მას ძნელად მისასვლელს ხდიდა მტრისთვის. ადგილის ისტორია რომაული ეპოქიდან იწყება, თუმცა დღეისათვის მნიშნელოვანი ისტორიული ნაშთები შემორჩენილი არაა.
 
 ციხე-სიმაგრე აგებულ იქნა [[1093]] წელს [[ნორმანები|ნორმანთა]] ეპოქაში. [[1138]] წელს იგი [[დე კლარი, ჟილბერ|ჟილბერ დე კლარის]] (1-ლი [[პემბროკის გრაფი]]) საკუთრება გახდა. მოგვიანებით ციხე-სიმაგრეს საგრაფოსთან ერთად დაეუფლა [[ტიუდორი, ჯესპერ|ჯესპერ ტიუდორი]] (1-ლი [[პემბროკის ჰერცოგი]]), რომელმაც აქ თავი შეაფარებინა მისი მოკლული ძმის ცოლს [[ბოფორი, მარგარეტ|მარგარეტ ბოფორს]]. იგი ფეხმძიმედ იყო და შეეძინა ვაჟი, მომავალი ინგლისის მეფე [[ჰენრი VII (ინგლისი)|ჰენრი VII ტიუდორი]].
 
@@ -9,7 +9,8 @@
 დრეისათვის ციხე-სიმაგრეს იცავს «უელსის ისტორიულ ძეგლთა აღმასრულებელი სააგენტო» და იგი ღიაა ტურისტებისათვის.
 
 
-
+[[კატეგორია:ბრიტანეთის ისტორიული ძეგლები]]
+[[კატეგორია:ციხე-სიმაგრეები]]
 
 
 [[en:Pembroke Castle]]
