--- a/მარგარეტე_(ბადენი).mw
+++ b/მარგარეტე_(ბადენი).mw
@@ -13,3 +13,6 @@
 * [[გეორგ (ბადენი)|გეორგი]] (* [[1433]]; † [[1484]])
 * [[მარკუს (ბადენი)|მარკუსი]] (* [[1434]]; † [[1478]])
 * [[მათილდე (ბადენი)|მათილდე]] († [[1485]])
+
+
+[[de:Margarete von Baden]]
