--- a/კათარინა_ფონ_ლოთრინგენი.mw
+++ b/კათარინა_ფონ_ლოთრინგენი.mw
@@ -11,3 +11,6 @@
 * [[მარკუს (ბადენი)|მარკუსი]] (* [[1434]]; † [[1478]])
 * [[მარგარეტე (ბადენი)|მარგარეტე]] (* [[1431]]; † [[1457]])
 * [[მათილდე (ბადენი)|მათილდე]] († [[1485]])
+
+
+[[de:Katharina von Lothringen]]
