--- a/გეორგ_ფონ_შიონერერი.mw
+++ b/გეორგ_ფონ_შიონერერი.mw
@@ -5,3 +5,11 @@
 გეორგ ფონ შიონერერი [[1879]] წლიდან [[ავსტრია-უნგრთი|ავსტრია-უნგრეთში]] [[გერმანულ-ნაციონალისტური მოძრაობა|გერმანულ-ნაციონალისტური მოძრაობის]] და შემდგომში [[საყოველთაო გერმანული მოძრაობა|საყოველთაო გერმანული მოძრაობის]] ერთპიროვნული ლიდერი იყო.
 
 შიონერერი [[ბისმარკი, ოტო ფონ|ოტო ფონ ბისმარკის]] მაღმერთებელი  და მისი პოლიტიკის გამტარებელი იყო. [[1922]] წელს იგი დაასაფლავეს [[ბისმარკის მავზოლეუმი|ბისმარკის მავზოლეუმის]] მახლობლად საქსონიის ტყეში.
+
+
+
+[[de:Georg von Schönerer]]
+[[en:Georg Ritter von Schönerer]]
+[[no:Georg Ritter von Schönerer]]
+[[pt:Georg Ritter von Schönerer]]
+[[fi:Georg Ritter von Schönerer]]
