--- a/ანდო_ჰიროშიგე.mw
+++ b/ანდო_ჰიროშიგე.mw
@@ -3,3 +3,15 @@
 ანდო ჰიროშიგე [[უკიიო-ე]]-ს მიმდინარეობის ერთ-ერთი თვალსაჩინო წარმომადგენელი და [[ჰოკუზაი, კაცუშიკა|კაცუშიკა ჰოკუზაის]] კონკურენტი იყო.
 
 მისმა ნამუშევრებმა “ტოკაიდოს 53 გაჩერება” (1833-1834) და “ედოს 100 ხედი” (1856-1858) დიდი გავლენა იქონიეს ფრანგ [[იმპრესიონიზმი|იმპროსიონისტებზე]].
+
+
+
+[[ar:هيروشيغه]]
+[[de:Andō Hiroshige]]
+[[en:Hiroshige]]
+[[eo:ANDO Hiroshige]]
+[[fr:Hiroshige]]
+[[ja:歌川広重]]
+[[nl:Ando Hiroshige]]
+[[pl:Andou Hiroshige]]
+[[sv:Ando Hiroshige]]
