--- a/საფრანგეთის_მარშალი.mw
+++ b/საფრანგეთის_მარშალი.mw
@@ -46,3 +46,13 @@
 * [[1368]] - ლუი II დე შამპანი (Louis II. de Champagne) (* [[1342]] - † [[1403]]), გრაფი დე სანკერი, [[1397]] წლიდან [[საფრანგეთის კონეტაბლი]]
 * [[1391]] - ჟან II ლე მენგრი (Jean II. Le Maingre) მეტსახელად „ბუსიკო“ (Boucicaut) (* [[1366]] - † [[1421]])
 * [[1397]] - ჟან II დე რიო (Jean II. de Rieux) (* [[1342]] - † [[1417]]), სენიორ დე რიო დე როშფორი
+
+
+[[de:Marschall von Frankreich]]
+[[en:Marshal of France]]
+[[fr:Maréchal de France]]
+[[it:Maresciallo di Francia]]
+[[pt:Marechal de França]]
+[[ru:Маршал Франции]]
+[[sv:Marskalk av Frankrike]]
+[[zh:法国元帅]]
