--- a/საფრანგეთის_მარშალი.mw
+++ b/საფრანგეთის_მარშალი.mw
@@ -1,7 +1,7 @@
 სამხედრო რანგი „'''საფრანგეთის მარშალი'''“ ([[ფრანგული ენა|ფრანგ.]]: Maréchal de France) [[1190]] წელს დაარსა [[ფილიპ II (საფრანგეთი)|ფილიპ II]]-ემ სპეციალურად ალბერიკ კლემენისათვის.
 
 ==XII საუკუნე==
-* [[1190]] - ალბერიკ კლემენი (Albéric Clément) († [[1191]]), სინიორ დე მე, საფრანგეთის პირველი მარშალი.
+* [[1190]] - ალბერიკ კლემენი (Albéric Clément) († [[1191]]), სინიორ დე მეცი, საფრანგეთის პირველი მარშალი.
 * [[1192]] - გიიომ დე ბურნელი (Guillaume de Bournel)
 
 ==XIII საუკუნე==
