--- a/ანდო_ჰიროშიგე.mw
+++ b/ანდო_ჰიროშიგე.mw
@@ -1,10 +1,13 @@
-'''ანდო ჰიროშიგე''' (მოგვიანებით უტაგავა ჰიროშიგე) ([[იაპონური ენა|იაპონ.]]: ) (* [[1797]], [[უდე]]; † [[12 ოქტომბერი]] [[1858]]) – [[იაპონელები|იაპონელი]] მხატვარი.
+[[სურათი:Portrait à la mémoire d'Hiroshige par Kunisada.jpg|ჰიროშიგეს გარდაცვალების შემდეგ შესრულებული პორტრეტი [[უტაგავა კუნისადა|უტაგავა კუნისადას]] მიერ]]
+'''ანდო ჰიროშიგე''' (მოგვიანებით '''უტაგავა ჰიროშიგე''') ([[იაპონური ენა|იაპონ.]]: 安藤広重) (* [[1797]], [[უდე]]; † [[12 ოქტომბერი]] [[1858]]) – [[იაპონელები|იაპონელი]] მხატვარი.
 
 ანდო ჰიროშიგე [[უკიიო-ე]]-ს მიმდინარეობის ერთ-ერთი თვალსაჩინო წარმომადგენელი და [[ჰოკუზაი, კაცუშიკა|კაცუშიკა ჰოკუზაის]] კონკურენტი იყო.
 
 მისმა ნამუშევრებმა “ტოკაიდოს 53 გაჩერება” (1833-1834) და “ედოს 100 ხედი” (1856-1858) დიდი გავლენა იქონიეს ფრანგ [[იმპრესიონიზმი|იმპროსიონისტებზე]].
 
+{{ესკიზი}}
 
+[[კატეგორია:იაპონელი მხატვრები]]
 
 [[ar:هيروشيغه]]
 [[de:Andō Hiroshige]]
