*Empty MediaWiki Message*

--- a/ანდო_ჰიროშიგე.mw
+++ b/ანდო_ჰიროშიგე.mw
@@ -1,4 +1,4 @@
-[[სურათი:Portrait à la mémoire d'Hiroshige par Kunisada.jpg|ჰიროშიგეს გარდაცვალების შემდეგ შესრულებული პორტრეტი [[უტაგავა კუნისადა|უტაგავა კუნისადას]] მიერ]]
+[[სურათი:Portrait à la mémoire d'Hiroshige par Kunisada.jpg|thumb|250px|ჰიროშიგეს გარდაცვალების შემდეგ შესრულებული პორტრეტი [[უტაგავა კუნისადა|უტაგავა კუნისადას]] მიერ]]
 '''ანდო ჰიროშიგე''' (მოგვიანებით '''უტაგავა ჰიროშიგე''') ([[იაპონური ენა|იაპონ.]]: 安藤広重) (* [[1797]], [[უდე]]; † [[12 ოქტომბერი]] [[1858]]) – [[იაპონელები|იაპონელი]] მხატვარი.
 
 ანდო ჰიროშიგე [[უკიიო-ე]]-ს მიმდინარეობის ერთ-ერთი თვალსაჩინო წარმომადგენელი და [[ჰოკუზაი, კაცუშიკა|კაცუშიკა ჰოკუზაის]] კონკურენტი იყო.
