--- a/სუამი.mw
+++ b/სუამი.mw
@@ -1,4 +1,4 @@
-'''სუამის ქვეყნები''' - სახელმწიფოთა შორის ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რესპიბლიკებიდან - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი წარმოიქმნა იმ სახელმწიფოების პირველი ასოსგან, რომლებიც გაერთიანებული არიან მასში. უზბეკეთის გასვლამდე იგი იწოდებოდა [[სუუამის ქვეყნები]].
+'''სუამის ქვეყნები''' - სახელმწიფოთა შორის ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რესპიბლიკებიდან - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი წარმოიქმნა იმ სახელმწიფოების პირველი ასოსგან, რომლებიც გაერთიანებული არიან მასში. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
 
 {{ესკიზი}}    
 
