*Empty MediaWiki Message*

--- a/სუამი.mw
+++ b/სუამი.mw
@@ -1,4 +1,13 @@
-'''სუამის ქვეყნები''' - სახელმწიფოთა შორის ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რესპიბლიკებიდან - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი წარმოიქმნა იმ სახელმწიფოების პირველი ასოსგან, რომლებიც გაერთიანებული არიან მასში. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
+[[სურათი:GUAM_in_CIS_Map.png|thumb|250px|{{legend|#6bae63|სუამის წევრები}}
+{{legend|#ffff84|სუამის ყოფილი წევრები}}
+{{legend|#ffcbce|დანარჩენი დსთ}}]]
+
+'''სუამის ქვეყნები''' - სახელმწიფოთა შორის ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რამდენიმე რესპუბლიკის მიერ - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი მასში გაერთიანებულ სახელმწიფოთა სახელებისგან შემდგარი აკრონიმია. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
+
+==ისტორია==
+==წევრები==
+==ორგანიზაციის სტრუქტურა==
+==რესურსები==
 
 {{ესკიზი}}    
 
