*Empty MediaWiki Message*

--- a/ჰოენცოლერნ-ზიგმარინგენები.mw
+++ b/ჰოენცოლერნ-ზიგმარინგენები.mw
@@ -35,3 +35,6 @@
 
 * ფრიდრიხი  (1927-1965)
 * [[ჰოენცოლერნი, ფრიდრიხ-ვილჰელმ ფონ|ფრიდრიხ-ვილჰელმი]] (1965- დღემდე)
+
+
+[[de:Hohenzollern-Sigmaringen]]
