--- a/ალეგზანდერ_ჰამილტონი.mw
+++ b/ალეგზანდერ_ჰამილტონი.mw
@@ -74,6 +74,7 @@
 [[it:Alexander Hamilton]]
 [[he:אלכסנדר המילטון]]
 [[nl:Alexander Hamilton]]
+[[no:Alexander Hamilton]]
 [[ja:アレクサンダー・ハミルトン]]
 [[pl:Alexander Hamilton]]
 [[ru:Гамильтон, Александр]]
