--- a/ჰოენცოლერნ-ზიგმარინგენები.mw
+++ b/ჰოენცოლერნ-ზიგმარინგენები.mw
@@ -1,7 +1,8 @@
+[[სურათი:280px-Schloss Sigmaringen.JPG|thumb|left|ჰოენცოლერნ სასახლე ზიგმარინგენის სამხრეთი მხარე]]
 ჰოენცოლერნ-ზიგმარინგენი [[ჰოენცოლერნი (დინასტია)|ჰოენცოლერნთა]] დინასტიის [[შვაბია|შვაბიური]] და [[კათოლიციზმი|კათოლიკე]] შტოა. იგი ერთ-ერთი უძველესი გერმანული არისტოკრატული საგვარეულოა, რომელიც პირველად XI საუკუნეში მოიხსენიება გრაფების ტიტულით. დინასტია სავარაუდოდ [[ბურხარდინგები (დინასტია)|ბურხარდინგების]] საჰერცოგო საგვარულოდან წარმომავალი ცოლერნების ერთ-ერთი შტოა. XIII საუკუნის დასაწყისში ჰოენცოლერნები ორ შტო გაიყვნენ: შვაბიური შტო და ფრანკონიული შტო. ფრანკი ჰოენცოლერნები შემდგომში [[ბრანდენბურგი (მიწა)|ბრანდენბურგის]] კურფიურსტები და პრუსიის მეფეები გახდნენ.
 
 [[1576]] წელს შვაბი ჰოენცოლერნები ორ შტოდ გაიყვნენ: [[ჰოენცოლერნ-ჰეხინგენი]] და ჰოენცოლერნ-ზიგმარინგენი. ჰეხინგენის შტო [[1869]] წელს ამოწყდა, ზიგმარინგენის კი დღემდე განაგრძობს არსებობას. დინასტიის საგვარეულო [[ზიგმარინგენის სასახლე|სასახლე]] ქალაქ [[ზიგმარინგენში]] მდებარეობს.  
-
+[[სურათი:280px-Sigmaringen schloss.jpg|thumb|ზიგმარინგენების სასახლე]]
 დრევანდელ [[ბადენ-ვიურტემბერგი|ბადენ-ვიურტემბერგში]] მდებარე ჰოენცოლერნ-ზიგმარინგენის სათავადო [[1849]] [[პრუსია|პრუსიის]] სამეფომ შეიერთა, თუმცა დინასტია განაგრძობდა მნიშვნელოვანი როლის თამაშა გერმანიის და საერთოდ ევროპის ისტორიაში. ჰოენცოლერნ-ზიგმარინგენის საგვარულო [[1866]]-[[1947]] წლებში მეფობდა [[რუმინეთი|რუმინეთში]].
 
 
