*Empty MediaWiki Message*

--- a/შოთა_რუსთაველი.mw
+++ b/შოთა_რუსთაველი.mw
@@ -20,5 +20,6 @@
 [[he:שותא רוסתוולי]]
 [[it:Shota Rustaveli]]
 [[ja:ショタ・ルスタヴェリ]]
+[[pl:Szota Rustaweli]]
 [[pt:Shota Rustaveli]]
 [[ru:Руставели, Шота]]
