--- a/ჰოენცოლერნ-ზიგმარინგენები.mw
+++ b/ჰოენცოლერნ-ზიგმარინგენები.mw
@@ -37,5 +37,5 @@
 * ფრიდრიხი  (1927-1965)
 * [[ჰოენცოლერნი, ფრიდრიხ-ვილჰელმ ფონ|ფრიდრიხ-ვილჰელმი]] (1965- დღემდე)
 
-
+[[კატეგორია:გერმანული არისტოკრატულთა საგვარეულოები]]
 [[de:Hohenzollern-Sigmaringen]]
