*Empty MediaWiki Message*

--- a/შოთა_რუსთაველი.mw
+++ b/შოთა_რუსთაველი.mw
@@ -1,16 +1,29 @@
-[[Image:Shota_Rustaveli.jpg|thumb|150px|left|შოთა რუსთაველის ფრესკა]]
+[[Image:Shota_Rustaveli.jpg|thumb|200px|შოთა რუსთაველის ფრესკა იერუსალიმის ჯვრის მოსანტერში]]
+[[Image:Shota.jpg|thumb|200px|შოთა რუსთაველი, სერგო ქობულაძის მხატვრული წარმოდგენით, 1937]]
+[[Image:RustaveliManuscript.jpg|thumb|200px|ვეფხისტყაოსნის მანუსკრიპტი]]
+'''შოთა რუსთაველი''' (*დაახ. [[1160]]-[[1165|65]]) -- მე-12 საუკუნის დიდი ქართველი პოეტი და მოაზროვნე, ავტორი საქვეყნოდ ცნობილი პოემისა “[[ვეფხისტყაოსანი]]”. მსოფლიოს მრავალ ლიტერატურათმცოდნეთა მიერ მიიჩნევა შუასაუკუნეების მსოფლიო ლიტერატურის ერთ-ერთ უმნიშვნელოვანეს წარმომადგენლად.
 
-'''შოთა რუსთაველი''' - დიდი ქართველი პოეტი და მოაზროვნე, ავტორი საქვეყნოდ ცნობილი პოემისა “[[ვეფხისტყაოსანი]]”. პოეტის ცხოვრებისა და მოღვაწეობის შესახებ თითქმის არავითარ ცნობებს არ მოუღწევია ჩვენამდე. რიგი ისტორიული, ლიტერატურული და ფოლკლორული წყაროების საფუძველზე იქმნება დიდი პოეტის ცხოვრებისა და მოღვაწეობის არაერთი ვერსია. შოთა რუსთაველის ბიოგრაფიული მონაცემების დასადგენად ერთ-ერთი ძირითადი წყარო თვით მისი პოემაა. პოემის [[პროლოგი|პროლოგსა]] და [[ეპილოგი|ეპილოგში]] ის რამდენჯერმე იხსენიებს საკუთარს თავს როგორც რუსთაველი (უფრო ზუსტად რუსთველი), რაც სავარაუდოდ [[რუსთავი|რუსთავის]] პატრონს, მფლობელს ან სულაც მკვიდრს უნდა ნიშნავდეს. პოეტის სახელი - შოთა დასტურდება იკონოგრაფიული და ლიტერატურული ძეგლებიდან. პოეტის დაბადების თარიღად სახავენ [[1160]]-[[1165]] წლებს. ის ცხოვრობდა საქართველოს მეფის [[თამარი|თამარისა]] და მისი მეუღლის [[დავით სოსლანი|დავით სოსლანის]] ზეობის პერიოდში, ქართული სახელმწიფოსა და მისი ხალხის მატერიალური და სულიერი აყვავების პერიოდში. 
-
-
-შოთა რუსთაველმა, როგორც ჩანს, ბრწყინვალე განათლება მიიღო საქართველოში, [[გელათის აკადემია|გელათის აკადემიაში]], შემდეგ - [[საბერძნეთი|საბერძნეთში]], შეისწავლა [[ბერძნული ენა|ბერძნული]], [[არაბული ენა|არაბული]] და [[სპარსული ენა|სპარსული]] ენები, იცნობდა არა მარტო ქართველ მოაზროვნეთა ნაშრომებს, არამედ ანტიკურ ფილოსოფიას, [[ემპედოკლე|ემპედოკლეს]], [[ჰერაკლიტე|ჰერაკლიტეს]], [[პლატონი|პლატონის]] ნაშრომებს, აღმოსავლურ ლიტერატურას ([[ფირდოუსი]], [[გურგანი]], [[ნიზამი]] და სხვა). ყოველივე ეს, აგრეთვე პოეტის განსწავლულობა ასტრონომიაში, ასტროლოგიაში, გეოგრაფიაში, მედიცინაში, ფილოსოფიაში, სამართალში, ისტორიაში, სამხედრო საქმეში და სხვა, ასახულია პოემაში.
-
+==წარმომავლობა==
+შოთა რუსთაველის ცხოვრებისა და მოღვაწეობის შესახებ ჩვენამდე თითქმის არავითარ ცნობას არ მოუღწევია. რიგი ისტორიული, ლიტერატურული და ფოლკლორული წყაროების საფუძველზე იქმნება დიდი პოეტის ცხოვრებისა და მოღვაწეობის არაერთი ვერსია. რუსთაველის ბიოგრაფიული მონაცემების დასადგენად ერთ-ერთი ძირითადი წყარო თვით მისი პოემაა. პოემის [[პროლოგი|პროლოგსა]] და [[ეპილოგი|ეპილოგში]] ის რამდენჯერმე იხსენიებს საკუთარს თავს როგორც რუსთაველი (უფრო ზუსტად რუსთველი), რაც სავარაუდოდ [[რუსთავი|რუსთავის]] პატრონს, მფლობელს ან სულაც მკვიდრს უნდა ნიშნავდეს. პოეტის სახელი - შოთა დასტურდება იკონოგრაფიული და ლიტერატურული ძეგლებიდან. პოეტის დაბადების თარიღად მიიჩნევენ [[1160]]-[[1165]] წლებს. ის ცხოვრობდა საქართველოს მეფის [[თამარი|თამარისა]] და მისი მეუღლის [[დავით სოსლანი|დავით სოსლანის]] ზეობის პერიოდში, ქართული სახელმწიფოსა და მისი ხალხის მატერიალური და სულიერი აყვავების პერიოდში. 
 
 [[1960]] წელს [[პალესტინაში]] გაემგზავრნენ ქართველი მეცნიერები [[აბაშიძე, ირაკლი|ი.აბაშიძე]], [[წერეთელი, გიორგი|გ.წერეთელი]], [[შანიძე, აკაკი|ა.შანიძე]], რომელთაც [[იერუსალიმის ჯვრის მონასტერი|იერუსალიმის ჯვრის მონასტერში]] მოიძიეს და გადაიღეს სვეტზე გამოსახული შოთა რუსთაველის პორტრეტი. აქ მოპოვებული მასალით დასტურდება, რომ იგი იყო მეჭურჭლეთუხუცესი თამარის კარზე. ლეგენდის თანახმად, პოეტი გარდაიცვალა ჯვრის მონასტერში, თუმცა ეს ვერსია სადავოა.
 
+==განათლება==
+შოთა რუსთაველმა, როგორც ჩანს, ბრწყინვალე განათლება მიიღო ჯერ საქართველოში, [[გელათის აკადემია|გელათის აკადემიაში]], შემდეგ - [[საბერძნეთი|საბერძნეთში]]; შეისწავლა [[ბერძნული ენა|ბერძნული]], [[არაბული ენა|არაბული]] და [[სპარსული ენა|სპარსული]] ენები, იცნობდა არა მარტო ქართველ მოაზროვნეთა ნაშრომებს, არამედ ანტიკურ ფილოსოფიას, [[ემპედოკლე|ემპედოკლეს]], [[ჰერაკლიტე|ჰერაკლიტეს]], [[პლატონი|პლატონის]] ნაშრომებს, აღმოსავლურ ლიტერატურას ([[ფირდოუსი]], [[გურგანი]], [[ნიზამი]] და სხვა). ყოველივე ეს, აგრეთვე პოეტის განსწავლულობა ასტრონომიაში, ასტროლოგიაში, გეოგრაფიაში, მედიცინაში, ფილოსოფიაში, სამართალში, ისტორიაში, სამხედრო საქმეში და სხვა, ასახულია მის პოემაში.
 
-პოემა “ვეფხისტყაოსანი” შესაძლოა შექმნილია [[XII]] ს-ის 80-90-იან წლებში და არაუგვიანეს [[XIII]] ს-ის პირველი ათწლეულისა. ზოგიერთი მკვლევარი პოემის დაწერის თარიღს ათავსებს [[1205]]-[[1207]] წლებში. სავარაუდოდ, იგი არ არის შოთა რუსთაველის ერთადერთი ნაწარმოები.
+==ვეფხისტყაოსანი==
+პოემა “ვეფხისტყაოსანის” შესაძლო შექმნით თარიღია [[XII]] ს-ის 80-90-იან წლები და არაუგვიანეს [[XIII]] ს-ის პირველი ათწლეულისა. ზოგიერთი მკვლევარი პოემის დაწერის თარიღს [[1205]]-[[1207]] წლების ინტერვალში ათავსებს. სავარაუდოდ, ეს არ უნდა იყოს შოთა რუსთაველის ერთადერთი ნაწარმოები, თუმცა მათ ჩვენამდე არ მოუღწევია.
 
+==მემკვიდრეობა==
+საქართველოს მერნიერებათა აკადემიის მანუსკრიპტთა ინსტიტუტში ინახება ვეფხისტყაოსნის XVI საუკუნის ხელნაწერთა ორი ფურცელი. პოემის დანარჩენი ფურცლები XVII საუკუნისაა (დაახ. 1653).
+
+საქართველოს რესპუბლიკის უმაღლესი ჯილდო ხელოვნებისა და ლიტერატურის დარგში შოთა რუსთაველის სახელს ატარებს ([[შოთა რუსთაველის სახელმწიფო პრემია]]). თბილისის [[რუსთაველის გამზირი|მთავარ გამზირსაც]] რუსთაველის სახელი ჰქვია. ასევე არსებობს [[შოთა რუსთაველის სახელმწიფო აკადემიური თეატრი]], შოთა რუსთაველის ქართული ლიტერატურის ინსტიტუტი საქართველოს მეცნიერებათა აკადემიასთან, და ა.შ.
+
+==რესურსები ინტერნეტში==
+*[http://www.rzuser.uni-heidelberg.de/~ci4/georgien/maler/kobuladse/rustaveli.htm ვეფხისტყაოსნის ილუსტრაციები სერგო ქობულაძის მიერ]
+*[http://www.acnet.ge/literat.htm საქართველოს მეცნიერებათა აკადემიის შოთა რუსთაველის ქართული ლიტერატურის ინსტიტუტი]
+
+[[კატეგორია:ქართველი მწერლები]]
 [[კატეგორია:ქართველები]]
 
 [[de:Schota Rustaweli]]
