--- a/შოთა_რუსთაველი.mw
+++ b/შოთა_რუსთაველი.mw
@@ -2,7 +2,8 @@
 '''შოთა რუსთაველი''' (*დაახ. [[1160]]-[[1165|65]]) -- მე-12 საუკუნის დიდი ქართველი პოეტი და მოაზროვნე, ავტორი საქვეყნოდ ცნობილი პოემისა “[[ვეფხისტყაოსანი]]”. მსოფლიოს მრავალ ლიტერატურათმცოდნეთა მიერ მიიჩნევა შუასაუკუნეების მსოფლიო ლიტერატურის ერთ-ერთ უმნიშვნელოვანეს წარმომადგენლად.
 
 ==წარმომავლობა==
-[[Image:Shota.jpg|thumb|200px|შოთა რუსთაველი, სერგო ქობულაძის მხატვრული წარმოდგენით, 1937]]
+[[Image:Shota.jpg|thumb|200px|შოთა რუსთაველი, [[ქობულაძე, სერგო|სერგო ქობულაძის]] მხატვრული წარმოდგენით, 1937]]
+[[Image:Schota Rustaweli.jpg|thumb|200px|რუსთაველის [[ფიროსმანი, ნიკო|ფიროსმანისეული]] წარმოსახვა]]
 [[Image:RustaveliManuscript.jpg|thumb|200px|ვეფხისტყაოსნის მანუსკრიპტი]]
 შოთა რუსთაველის ცხოვრებისა და მოღვაწეობის შესახებ ჩვენამდე თითქმის არავითარ ცნობას არ მოუღწევია. რიგი ისტორიული, ლიტერატურული და ფოლკლორული წყაროების საფუძველზე იქმნება დიდი პოეტის ცხოვრებისა და მოღვაწეობის არაერთი ვერსია. რუსთაველის ბიოგრაფიული მონაცემების დასადგენად ერთ-ერთი ძირითადი წყარო თვით მისი პოემაა. პოემის [[პროლოგი|პროლოგსა]] და [[ეპილოგი|ეპილოგში]] ის რამდენჯერმე იხსენიებს საკუთარს თავს როგორც რუსთაველი (უფრო ზუსტად რუსთველი), რაც სავარაუდოდ [[რუსთავი|რუსთავის]] პატრონს, მფლობელს ან სულაც მკვიდრს უნდა ნიშნავდეს. პოეტის სახელი - შოთა დასტურდება იკონოგრაფიული და ლიტერატურული ძეგლებიდან. პოეტის დაბადების თარიღად მიიჩნევენ [[1160]]-[[1165]] წლებს. ის ცხოვრობდა საქართველოს მეფის [[თამარი|თამარისა]] და მისი მეუღლის [[დავით სოსლანი|დავით სოსლანის]] ზეობის პერიოდში, ქართული სახელმწიფოსა და მისი ხალხის მატერიალური და სულიერი აყვავების პერიოდში. 
 
