*Empty MediaWiki Message*

--- a/ზალმი_(დინასტია).mw
+++ b/ზალმი_(დინასტია).mw
@@ -16,6 +16,7 @@
 * ზალმ-კირბურგი ([[1743]] წლიდან რაიხსფიურსტები, † [[1905]])
 * ზალმ-ჰორსტმარ-გრუმბახი ([[1816]] წლიდან ფიურსტ ფონ ჰორსტმარი]].
 
+[[კატეგორია:გერმანული არისტოკრატთა საგვარეულოები]]
 
 [[de: Salm (Adel)]]
 [[fr:Principauté de Salm]]
