--- a/ნიკოლოზ_აარონი.mw
+++ b/ნიკოლოზ_აარონი.mw
@@ -10,4 +10,12 @@
 • Nikolaj Aaron, Marc Chagall., (rororo-Monographie) Reinbek 2003, ISBN 3499506564
 
 
+[[კატეგორია:ბელორუსები]]
+[[კატეგორია:ამერიკელები]]
+[[კატეგორია:ხელოვნებათმცოდნეები]]
+[[კატეგორია:მწერლები]]
+[[კატეგორია:დაბადებული 1956]] 
+
+
+
 [[de:Nikolaj Aaron]]
