*Empty MediaWiki Message*

--- a/ნიკოლოზ_აარონი.mw
+++ b/ნიკოლოზ_აარონი.mw
@@ -10,7 +10,7 @@
 • Nikolaj Aaron, Marc Chagall., (rororo-Monographie) Reinbek 2003, ISBN 3499506564
 
 
-[[კატეგორია:ბელორუსები]]
+[[კატეგორია:ბელარუსები]]
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:ხელოვნებათმცოდნეები]]
 [[კატეგორია:მწერლები]]
