*Empty MediaWiki Message*

--- a/ნიკო_ფიროსმანი.mw
+++ b/ნიკო_ფიროსმანი.mw
@@ -1,7 +1,8 @@
 [[სურათი:180px-Niko Pirosmani 1916.jpg|thumb|right|ნიკო ფიროსმანი]]
-'''ფიროსმანაშვილი, ნიკო''' (ნიკოლოზ) ასლანის ძე (''ნიკო ფიროსმანი'')(* [[1862]], სოფ. [[მირზაანი]]   ―     † [[1918]],[[ თბილისი]]), [[ქართველები | ქართველი]] მხატვარი. 
+'''ფიროსმანაშვილი, ნიკო''' (ნიკოლოზ) ასლანის ძე (''ნიკო ფიროსმანი'')(* [[1862]], სოფ. [[მირზაანი]]   ―     † [[1918]],[[ თბილისი]]), [[ქართველები | ქართველი]] პრიმიტივისტი მხატვარი. 
 
-ცნობები ფიროსმანის ცხოვრების შესახებ უმეტესად შეკრებილია მისი გარდაცვალერბის შემდეგ. დაიბადა გლეხის ოჯახში, რომელიც ადრევე გადასახლდა შულავერში. მშობლების გარდაცვალების შემდეგ ფიროსმანი თბილისში გადმოვიდა საცხოვრებლად. ბავშვობაშივე იჩენდა დიდ ინტერესს მხატვრობისადმი, ბევრს ხატავდა კიდეც. სპეციალური სამხატვრო განათლება არ მიუღია. 1880-იან წლებში თვითნასწავლ [[ზაზიაშვილი, გიორგი | გ. ზაზიაშვილთან]] ერთად გახსნა ფერწერის სახელოსნო და აბრების შეკვეთებს ღებულობდა. [[1890]]-[[1894]] კონდუქტორად მუშაობდა ამიერკავკასიის რკინიგზაზე, შემდეგ ვაჭრობაშიც სცადა ბედი. XIX-XX საუკუნეების მიჯნაზე თბილისელ მედუქნეებთან და მიკიტნებთან აფარებდა თავს, მათი შეკვეთით ხატავდა აბრებს, პორტრეტებს, სურათებს. სიცოცხლის ბოლომდე გაჭირვებას თავი ვერ დააღწია; ქართველ მხატვართა საზოგადოებამ სცადა შეემსუბუქებინა მისი ხვედრი. ფიროსმანაშვილი მარტოობაში გარდაიცვალა და მისი საფლავიც უცნობი დარჩა. 
+==ბიოგრაფია==
+ცნობები ფიროსმანის ცხოვრების შესახებ უმეტესად შეკრებილია მისი გარდაცვალების შემდეგ. დაიბადა გლეხის ოჯახში, რომელიც ადრევე გადასახლდა შულავერში. მშობლების გარდაცვალების შემდეგ ფიროსმანი თბილისში გადმოვიდა საცხოვრებლად. ბავშვობაშივე იჩენდა დიდ ინტერესს მხატვრობისადმი, ბევრს ხატავდა კიდეც. სპეციალური სამხატვრო განათლება არ მიუღია. 1880-იან წლებში თვითნასწავლ [[ზაზიაშვილი, გიორგი | გ. ზაზიაშვილთან]] ერთად გახსნა ფერწერის სახელოსნო და აბრების შეკვეთებს ღებულობდა. [[1890]]-[[1894]] კონდუქტორად მუშაობდა ამიერკავკასიის რკინიგზაზე, შემდეგ ვაჭრობაშიც სცადა ბედი. XIX-XX საუკუნეების მიჯნაზე თბილისელ მედუქნეებთან და მიკიტნებთან აფარებდა თავს, მათი შეკვეთით ხატავდა აბრებს, პორტრეტებს, სურათებს. სიცოცხლის ბოლომდე გაჭირვებას თავი ვერ დააღწია; ქართველ მხატვართა საზოგადოებამ სცადა შეემსუბუქებინა მისი ხვედრი. ფიროსმანაშვილი მარტოობაში გარდაიცვალა და მისი საფლავიც უცნობი დარჩა. 
 [[სურათი:Meezove.jpg|thumb|left|მეეზოვე]]
 ფიროსმანის, როგორც მხატვრის აღმოჩენაში, მისი სურათების შეგროვებასა და შემოქმედების პროპაგანდაში განსაკუთრებული ღვაწლი მიუძღვის ძმებ ზდანევიჩებს - მხატვარ [[ზდანევიჩი, კირილ | კირილ]] და პოეტ [[ზდანევიჩი, ილია| ილიას]], მხატვრებს მ. ლე დანტიუს, [[შევარდნაძე, დიმიტრი | დ. შევარდნაძეს]], [[გუდიაშვილი, ლადო | ლ. გუდიაშვილს]], [[კაკაბაძე, დავით | დ. კაკაბაძეს]] და სხვებს. უფრო გვიან  - [[ლეონიძე, გიორგი | გ. ლეონიძეს]], რომელმაც მნიშვნელოვანი ცნობები მოიპოვა´მისი ბიოგრაფიისათვის.
 
