--- a/სეპუკუ.mw
+++ b/სეპუკუ.mw
@@ -1,7 +1,5 @@
 [[სურათი:Akashi Gidayu writing his death poem before comitting Seppuku.jpg|thumb|გენერალი აკაში გიდაუ ემზადება სეპუკუსთვის 1582 წელს ბატონისთვის ომის წაგების გამო. სეპუკუმდე სასიკვდილო პოემას სწერს.]]
-'''სეპუკუ''' (იაპ.: 切腹, "მუცლის-ჭრა" ) იაპონური თვითმკვლელობის რიტუალია მუცლის გამოტვიფრით. ასევე ცნობილია ტერმინით '''ჰარაკირი''' (腹切り)  და იწერება იმავე კანჯით, როგორც სეპუკუ, ოღონდ შებრუნებით. ჰარაკირი [[იაპონური ენა|იაპონურში]] უფრო კოლოქვიალურია და ვულგარულ ფორმად ითვლება. სეპუკუს მეშვეობით თვითმკვლელობის პრაქტიკა ბატონის (იერარქიით მაღლა მდგომის) თანდასწრებით ცნობილია როგორც '''ოიბარა''' (追腹 or 追い腹); რიტუალი იგივეა.
-
-{{ესკიზი}}
+'''სეპუკუ''' (იაპ.: 切腹, "მუცლის-ჭრა" ) იაპონური თვითმკვლელობის რიტუალია მუცლის გამოტვიფრით. ასევე ცნობილია ტერმინით '''ჰარაკირი''' (腹切り)  და იწერება იმავე კანჯით, როგორც სეპუკუ, ოღონდ შებრუნებით. ჰარაკირი [[იაპონური ენა|იაპონურში]] უფრო კოლოქვიალურია და ვულგარულ ფორმად ითვლება. სეპუკუს მეშვეობით თვითმკვლელობის პრაქტიკა ბატონის (იერარქიით მაღლა მდგომის) თანდასწრებით ცნობილია როგორც '''ოიბარა''' (追腹 ან 追い腹); რიტუალი იგივეა.
 
 
 [[კატეგორია:იაპონიის კულტურა]]
