--- a/სეპუკუ.mw
+++ b/სეპუკუ.mw
@@ -2,6 +2,8 @@
 '''სეპუკუ''' (იაპ.: 切腹, "მუცლის-ჭრა" ) იაპონური თვითმკვლელობის რიტუალია მუცლის გამოტვიფრით. ასევე ცნობილია ტერმინით '''ჰარაკირი''' (腹切り)  და იწერება იმავე კანჯით, როგორც სეპუკუ, ოღონდ შებრუნებით. ჰარაკირი [[იაპონური ენა|იაპონურში]] უფრო კოლოქვიალურია და ვულგარულ ფორმად ითვლება. სეპუკუს მეშვეობით თვითმკვლელობის პრაქტიკა ბატონის (იერარქიით მაღლა მდგომის) თანდასწრებით ცნობილია როგორც '''ოიბარა''' (追腹 ან 追い腹); რიტუალი იგივეა.
 
 
+
+{{ესკიზი}}
 [[კატეგორია:იაპონიის კულტურა]]
 [[კატეგორია:იაპონური ტერმინები]]
 
