*Empty MediaWiki Message*

--- a/სუამი.mw
+++ b/სუამი.mw
@@ -2,15 +2,26 @@
 {{legend|#ffff84|სუამის ყოფილი წევრები}}
 {{legend|#ffcbce|დანარჩენი დსთ}}]]
 
-'''სუამის ქვეყნები''' - სახელმწიფოთა შორის ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რამდენიმე რესპუბლიკის მიერ - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი მასში გაერთიანებულ სახელმწიფოთა სახელებისგან შემდგარი აკრონიმია. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
+'''სუამი''' - სახელმწიფოთაშორისო ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რამდენიმე რესპუბლიკის მიერ - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი მასში გაერთიანებულ სახელმწიფოთა სახელებისგან შემდგარი აკრონიმია. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
 
 ==ისტორია==
+თანამშრომლობა საქართველოს, უკრაინას, აზერბაიჯანსა და მოლდოვას შორის სუამის ფარგლებში დაიწყო საკონსულტაციო ფორუმით, რომელიც 1997 წლის 10 ოქტომბერს შედგა სტრასბურგში. 1999 წლის აპრილში ორგანიზაციას უზბეკეთიც შეუერთდა და მას ''სუუამი'' დაერქვა.
+
+2001 წლის 6-7 ივნისს გამართულ იალტის სამიტზე მოხდა სუუამის ქარტიის ხელმოწერა, რაც ორგანიზაციის ფორმალურად შექმნის თარიღად ითვლება.
+
+2002 წელს უზბეკეთმა გამოაცხადა რომ ორგანიზაციიდან გამოსვლას გეგმავდა და მას შემდეგ სუამის სამიტებსა და შეხვედრებს იგნორირებას უწევდა.
+
+მომდევნო წლებში ორგანიზაცია სტაგნაციას განიცდის: 2004 წლის იალტის შეხვედრას ხუთი წევრიდან მხოლოდ ორი ესწრებოდა. თუმცა ბოლოდროინდელმა ფერადმა რევოლუციებმა საქართველოსა და უკრაინაში და მოლადავეთში პრო-დასავლური და ანტი-რუსული მმართველი პარტიის გაძლიერებამ სუამის წევრებს შორის თანამშრომლობა და კოორდინაცია უფრო აქტუალური გახადა, რამაც ბევრი ანალისტის აზრით შესაძლებელია სუამის მნიშვნელობის გაზრდას შეუწყოს ხელი.
+
+სუამის ბოლო სამიტი კიშინიოვში, მოლდოვა, შედგა 2005 წლის 22 აპრილს. უზბეკეთის პრეზიდენტი ისლამ კარიმოვი და ასევე მოწვეული პოლონეთის პრეზიდენტი შეხვედრაზე არ გამოჩენილან. თუმცა დამკვირვებლების როლში იყვნენ რუმინეთის პრეზიდენტი ტრაიან ბაშესკუ და ლიტვის პრეზიდენტი ვალდას ადამკუსი, აშშ-ის სახ. დეპარტამენტის ევრაზიის სპეც. წარმომადგენლის სტივენ მანისა და ეუთოს გენერალური მდივნის იან კუბისის თანდასწრებით. რუსეთის ელჩმა კიშინიოვში უკმაყოფილება გამოთქვა რუსეთის წარმომადგენლის არმოწვევის გამო. 
+
+2005 წლის 5 მაისს უზბეკეთმა საბოლოოდ ოფიციალურად განაცხადა ორგანიზაციიდან გასვლის შესახებ, რის შემდეგაც მას ისევ სუამი ჰქვია.
+
 ==წევრები==
 ==ორგანიზაციის სტრუქტურა==
 ==რესურსები==
 
 {{ესკიზი}}    
-
 
 
 
