--- a/სუამი.mw
+++ b/სუამი.mw
@@ -20,10 +20,14 @@
 ==წევრები==
 ==ორგანიზაციის სტრუქტურა==
 ==რესურსები==
+* [http://www.guuam.org/ ოფიციალური ვებგვერდი] - არ განახლებულა.
+* [http://www.mfa.gov.az/eng/international/organizations/guuam.shtml სუამის გვერდი აზერბაიჯანის საგარეო საქმეთა სამინისტროს ვებ-გვერდზე]
+
+
 
 {{ესკიზი}}    
 
-
+[[კატეგორია:საერთაშორისო ორგანიზაციები]]
 
 [[ca:GUAM]]
 [[de:GUAM]]
