--- a/სუამი.mw
+++ b/სუამი.mw
@@ -19,6 +19,12 @@
 
 ==წევრები==
 ==ორგანიზაციის სტრუქტურა==
+*ყოველწლიური შეხვედრა იმართება [[იალტა|იალტაში]] სუამის წევრ ქვეყნებს შორის. ეს ითვლება ორგანიზაციის უმაღლეს ორგანოდ.
+*ორგანიზაციის აღმასრულებელი ორგანო არის სუამის ქვეყნების საგარეო სამინისტროთა საბჭო.
+*სამუშაო ორგანოა ეროვნულ კოორდინატორთა კომიტეტი, რომელიც შედგება სუამის ყოველი წევრის თითო კოორდინატორისგან.
+*სუამის საინფორმაციო ოფისი [[კიევი|კიევშია]].
+*სულ რვა სამუშაო ჯგუფია, თემატური საკითხების მიხედვით: ენერგო-საინჟინრო; სატრანსპორტო; სავაჭრო-ეკონომიკური; საინფორმაციო საშუალებები და ტელეკომუნიკაციები; კულტურა; მეცნიერება და განათლება; ტურიზმი; ანტი-ტერორიზმი, ორგანიზებული კრიმინალისა და ნარკობიზნესის წინააღმდეგ ბრძოლა.
+
 ==რესურსები==
 * [http://www.guuam.org/ ოფიციალური ვებგვერდი] - არ განახლებულა.
 * [http://www.mfa.gov.az/eng/international/organizations/guuam.shtml სუამის გვერდი აზერბაიჯანის საგარეო საქმეთა სამინისტროს ვებ-გვერდზე]
