--- a/10_მარტი.mw
+++ b/10_მარტი.mw
@@ -4,8 +4,10 @@
 ==დღის მოვლენები==
 
 *[[1624]] : ინგლისმა ომი გამოუცხადა ესპანეთს.
+*[[1893]] : [[კოტ დ'ივუარი]] საფრანგეთის კოლონია ხდება.
+*[[1952]] : [[ბატისტა, ფუგენსიო|ფულგენსიო ბატისტა]] ტარმატებულ სამხედრო გადატრიალებას ახდენს კუბაზე.
 *[[1967]] : აშშ-ა ავიაციამ განახორციელა პირველი საჰაერო დარტყმები ვიეტნამზე.
-
+*[[1982]] : [[სიზიგი]] - [[მზის სისტემა|მზის სისტემის]] 9 პლანეტა ერთ ხაზზე ეწყობა მზის გასწვრივ.
 
 ==ამ დღეს დაბადებულნი==
 *[[1873]] : [[ვასერმანი, იაკობ]]- გერმანელი მწერალი.
