*Empty MediaWiki Message*

--- a/სუამი.mw
+++ b/სუამი.mw
@@ -1,6 +1,6 @@
-[[სურათი:GUAM_in_CIS_Map.png|thumb|250px|{{legend|#6bae63|სუამის წევრები}}
-{{legend|#ffff84|სუამის ყოფილი წევრები}}
-{{legend|#ffcbce|დანარჩენი დსთ}}]]
+[[სურათი:GUAM_in_CIS_Map.png|thumb|250px|{{ლეგენდა|#6bae63|სუამის წევრები}}
+{{ლეგენდა|#ffff84|სუამის ყოფილი წევრები}}
+{{ლეგენდა|#ffcbce|დანარჩენი დსთ}}]]
 
 '''სუამი''' - სახელმწიფოთაშორისო ორგანიზაცია, რომელიც შეიქმნა 1997 წლის ოქტომბერში ყოფილი საბჭოთა კავშირის რამდენიმე რესპუბლიკის მიერ - [[საქართველო]], [[უკრაინა]], [[აზერბაიჯანი]] და [[მოლდოვა]] (1999 წლიდან 2005 წლის ჩათვლით მასში აგრეთვე შედიოდა [[უზბეკეთი]]). ორგანიზაციის სახელი მასში გაერთიანებულ სახელმწიფოთა სახელებისგან შემდგარი აკრონიმია. უზბეკეთის გასვლამდე მას ეწოდებოდა [[სუუამის ქვეყნები]].
 
