--- a/ივანე_მუხრანბატონი.mw
+++ b/ივანე_მუხრანბატონი.mw
@@ -1,6 +1,6 @@
 '''ივანე კონატანტინეს ძე მუხრანბატონი'''(* [[1809]] ― † [[10 მარტი]], [[1895]]), მსხვილი ქართველი მემამულე, რუსეთის არმიის გენერალ-ლეიტენანტი. 
 
-სწავლა-განათლება მიიღო [[პეტერბურგი|პეტერბურგის]] ვაჟთა კორპუსში. აქტიურად მონაწილეობდა საბრძოლო ოპერაციებში [[შამილი|შამილის]] წინააღმდეგ. ამ დროს იგი [[ნიჟეგოროდი|ნიჟეგოროდის]] დრაგუნთა პოლკში ირიცხებოდა. [[1848]] წელს დაინიშნა [[ერევანი|ერევნის]] პოლკის მეთაურად. [[ყირიმის ომი|ყირიმის 1853-1856 ომის]] დროს სარდლობდა ე.წ. რიონის რაზმს, ებრძოდა სამეგრელოში შემოჭრილ ომერ-ფაშას ლაშქარს. თურქების წინააღმდეგ ბრძოლაში გამოჩენილი გმირობისათვის მუხრანბატონი დაჯილდოვდა წმ. გიორგის მესამე ხარისხის ორდენით. [[1881]] წელს სამხედრო სამსახურიდან გადადგომის შემდეგ არჩეული იყო თბილისის გუბერნიის თავადაზნაურთა წინამძღოლად (მარშლად). მუხრანბატონი ფლობდა 25 ათას დესეტინა მიწას. მას ერთ-ერთი პირველი ადგილი ეკავა რაციონალიზატორ მემამულეთა შორის; დიდ წარმატებას მიაღწია მეურნეობის კაპიტალისტურად გარდაქმნის საქმეში. [[1876]] მუხრანბატონმა საფრანგეთიდან გამოიწვია მეღვინეობის სპეციალისტები. დაიხმარა ცნობილი ქართველი მეღვინე ზ. ჯორჯაძე და მუხრანში ააგო დაახლოებით 1 მლნ. 200 ათ. ლიტრი ტევადობის ქარხანა, სადაც ღვინოს ევროპის წესით აყენებდა. [[1882]] ბუხრანბატონის ღვინომ მოსკოვის გამოფენაზე დაიმსახურა უმაღლესი ჯილდო - სახელმწიფო გერბი.
+სწავლა-განათლება მიიღო [[პეტერბურგი|პეტერბურგის]] [[პაჟთა კორპუსი|პაჟთა კორპუსში]]. აქტიურად მონაწილეობდა საბრძოლო ოპერაციებში [[შამილი|შამილის]] წინააღმდეგ. ამ დროს იგი [[ნიჟეგოროდი|ნიჟეგოროდის]] დრაგუნთა პოლკში ირიცხებოდა. [[1848]] წელს დაინიშნა [[ერევანი|ერევნის]] პოლკის მეთაურად. [[ყირიმის ომი|ყირიმის 1853-1856 ომის]] დროს სარდლობდა ე.წ. რიონის რაზმს, ებრძოდა სამეგრელოში შემოჭრილ ომერ-ფაშას ლაშქარს. თურქების წინააღმდეგ ბრძოლაში გამოჩენილი გმირობისათვის მუხრანბატონი დაჯილდოვდა წმ. გიორგის მესამე ხარისხის ორდენით. [[1881]] წელს სამხედრო სამსახურიდან გადადგომის შემდეგ არჩეული იყო თბილისის გუბერნიის თავადაზნაურთა წინამძღოლად (მარშლად). მუხრანბატონი ფლობდა 25 ათას დესეტინა მიწას. მას ერთ-ერთი პირველი ადგილი ეკავა რაციონალიზატორ მემამულეთა შორის; დიდ წარმატებას მიაღწია მეურნეობის კაპიტალისტურად გარდაქმნის საქმეში. [[1876]] მუხრანბატონმა საფრანგეთიდან გამოიწვია მეღვინეობის სპეციალისტები. დაიხმარა ცნობილი ქართველი მეღვინე ზ. ჯორჯაძე და მუხრანში ააგო დაახლოებით 1 მლნ. 200 ათ. ლიტრი ტევადობის ქარხანა, სადაც ღვინოს ევროპის წესით აყენებდა. [[1882]] მუხრანბატონის ღვინომ მოსკოვის გამოფენაზე დაიმსახურა უმაღლესი ჯილდო - სახელმწიფო გერბი.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:დაბადებული  1809]]
