*Empty MediaWiki Message*

--- a/ყირიმის_ავტონომიური_რესპუბლიკა.mw
+++ b/ყირიმის_ავტონომიური_რესპუბლიკა.mw
@@ -1,9 +1,9 @@
 [[Image:Map_of_Ukraine_political_simple_Oblast_Krim.png|thumb|ყირიმი]]
 ავტონომიური რესპუბლიკა [[უკრაინა|უკრაინის]] შემადგენლობაში, განლაგებულია ამავე სახელის ნახევარკუნძულზე შავი ზღვის ჩრდილოეთ ნაწილში. 
 
-*''ფართობი'' – 27 ათასი. 
+*''ფართობი'' – 27 ათასი კვ.კმ. 
 *''მოსახლეობა'' – 2,5 მლნ, მათ შორის 70% რუსია, 150 ათასი ყირიმელი თათარი. 
-*''დედაქალაქი'' – სიმფეროპოლი. • ქალაქები – სევასტოპოლი, იალტა. 
+*''დედაქალაქი'' – [[სიმფეროპოლი]]. • ქალაქები – [[სევასტოპოლი]], [[იალტა]]. 
 
 [[1475]]-[[1774]] - თურქეთის მმართველობის ქვეშ. [[1783]] – ანექსირებულ იქნა რუსეთის მიერ. [[1917]]-[[1920|20]] – ტავრიის რესპუბლიკა. [[1942]]-[[1944|44]] – ოკუპირებული იყო გერმანიის მიერ. ომის შემდეგ ყირიმელი თათრები გასახლებულ იქნენ უზბეკეთში, საიდანაც დაბრუნდნენ [[1987]] წელს. [[1954]]-[[1991|91]] – უკრაინის ოლქი. 1991 – ავტონომიური რესპუბლიკა.
 
