--- a/იალტა.mw
+++ b/იალტა.mw
@@ -12,7 +12,7 @@
 1991 წელს სსრკ-ს დაშლის შემდეგ იალტის ეკონომიკური მდგომარეობა მკვეთრად გაუარესდა. ახლად გამდიდრებულთა უმრავლესობა უპირატესობას ევროპის კურორტებს ანიჭებს საზღვრების გახსნის შემდეგ. მეორეს მხრივ, ყოფილი საბჭოთა კავშირის მოსახლეობის უმრავლესობა ეკონომიკურ გაჭირვებაში უკვე იალტაშიც ვეღარ ახერხებს დასვენებისთვის საკმარისი სახსრების შოვნას. თუმცა ბოლო წლებში იალტა ეკონომიკურად ისევ მომჯობინდა, ინფრასტრუქტურა გაუმჯობესდა და ტურისტებიც დაბრუნდნენ. დამსვენებლებთა უმრავლესობას ჯერჯერობით მხოლოდ რუსები და უკრაინელები შეადგენენ.
 
 ==რესურსები ინტერნეტში==
-*[* http://www.yalta.com.ua/yalta_engl/index_e.html იალტის ტურისტული მეგზური]
+*[http://www.yalta.com.ua/yalta_engl/index_e.html იალტის ტურისტული მეგზური]
 
 [[კატეგორია:უკრაინის ქალაქები]]
 
